--- a/app/src/main/res/layout/activity_password__reset.xml
+++ b/app/src/main/res/layout/activity_password__reset.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".profile.Account.Password_Reset">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,7 +20,7 @@
         android:layout_below="@+id/snip"
         android:layout_marginTop="20dp"
         android:id="@+id/pswrd"
-        android:text="Old Password"
+        android:text="Old Password:"
         android:textColor="@color/black"
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="10dp"
@@ -36,7 +37,8 @@
     <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/rectangular_border"
+        android:padding="10dp"
         android:layout_below="@+id/pswrd"
         android:hint="Enter Old Password"
         android:layout_marginLeft="10dp"
@@ -50,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/oldpswrd"
         android:id="@+id/pswrd2"
-        android:text="New Password"
+        android:text="New Password:"
         android:textColor="@color/black"
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="10dp"
@@ -67,10 +69,12 @@
     <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/rectangular_border"
         android:hint="Enter New Password"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:padding="10dp"
+
         android:id="@+id/newpswrd2"
         android:inputType="textPassword"
         />
@@ -80,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/newpswrd"
         android:id="@+id/pswrd3"
-        android:text="Confirm Password"
+        android:text="Confirm Password:"
         android:textColor="@color/black"
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="10dp"
@@ -96,10 +100,12 @@
     <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/rectangular_border"
         android:hint="Confirm Password"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:padding="10dp"
+
         android:id="@+id/confirm_password2"
         android:inputType="textPassword"
         app:endIconMode="password_toggle"/>
@@ -108,6 +114,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:layout_marginTop="30dp"
         android:layout_below="@+id/confirm_password">
 
     <Button
@@ -115,24 +122,25 @@
         android:layout_height="wrap_content"
         android:text="Confirm"
         android:padding="5dp"
-        android:textSize="22sp"
-        android:textColor="#FFC107"
+        android:textSize="15sp"
+        android:textColor="#03A9F4"
         android:id="@+id/confirm"
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/white_border"/>
+
+        android:background="@drawable/rectangular_round_searchbar"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
             android:padding="5dp"
-            android:textSize="22sp"
+            android:textSize="15sp"
             android:textColor="#000000"
             android:layout_marginTop="20dp"
             android:layout_toRightOf="@+id/confirm"
             android:layout_marginLeft="10dp"
             android:id="@+id/cancel"
-            android:background="@drawable/white_border"/>
+            android:background="@drawable/rectangular_round_searchbar"/>
     </RelativeLayout>
 
 </RelativeLayout>
