--- a/app/src/main/res/layout-v21/activity_explore.xml
+++ b/app/src/main/res/layout-v21/activity_explore.xml
@@ -41,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/relLayout1"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <RelativeLayout
         android:layout_width="match_parent"
