--- a/app/src/main/res/layout-v21/snippet_top_password_reset.xml
+++ b/app/src/main/res/layout-v21/snippet_top_password_reset.xml
@@ -21,7 +21,7 @@
                 android:layout_centerVertical="true"
                 android:text="Password Reset"
                 android:textColor="#000000"
-                android:layout_toRightOf="@+id/backarrow"
+                android:layout_centerHorizontal="true"
                 android:layout_marginLeft="15dp"
                 android:id="@+id/username"/>
             <ImageView
@@ -29,7 +29,7 @@
                 android:layout_height="30dp"
                 android:layout_centerVertical="true"
                 android:id="@+id/backarrow"
-                android:src="@drawable/ic_backarrow"/>
+                android:src="@drawable/ic_back_black_arrow"/>
 
 
         </RelativeLayout>
