--- a/app/src/main/res/layout/activity_fragment_joined_contest.xml
+++ b/app/src/main/res/layout/activity_fragment_joined_contest.xml
@@ -13,6 +13,15 @@ android:layout_height="match_parent">
     android:id="@+id/recycler_view2">
 
 </androidx.recyclerview.widget.RecyclerView>
+        <ProgressBar
+            android:id="@+id/pro2"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="@android:color/transparent"
+            android:visibility="visible" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
