--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,31 +39,6 @@
                     app:layout_constraintTop_toTopOf="parent">
 
 
-                    <TextView
-                        android:id="@+id/username"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="25dp"
-                        android:text="Username"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/domain"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Domain"
-                        android:textColor="@color/white"
-                        android:textSize="24sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/display_name" />
-
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -551,9 +526,36 @@
                 android:layout_centerVertical="true"
                 android:textSize="18sp"/>
 
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/domain"
+                android:text="Username"
+                android:textColor="@color/black"
 
+                android:textSize="18sp"
+                android:layout_centerHorizontal="true"
+                />
+
+            <TextView
+                android:id="@+id/domain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/orion"
+                android:text="Domain"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                android:layout_centerHorizontal="true"
+                />
         </RelativeLayout>
+
     </ScrollView>
 
     <include layout="@layout/layout_bottom_navigation_view" />
+
+
 </RelativeLayout>
