--- a/app/src/main/res/layout/public_vote_item.xml
+++ b/app/src/main/res/layout/public_vote_item.xml
@@ -19,17 +19,17 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="1">
+            android:weightSum="4">
             <TextView
                 android:id="@+id/num"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp"
-                android:layout_weight=".05"
+                android:layout_weight=".5"
 
                 android:gravity="center|center_vertical"
-                android:text="1"
+                android:text="124"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp"
-                android:layout_weight=".65"
+                android:layout_weight="2"
                 android:gravity="start|center_vertical"
                 android:maxLines="1"
                 android:text="Naman Mahendra"
@@ -52,7 +52,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight=".15"
+                android:layout_weight="0.5"
                 android:gravity="start|center_vertical"
                 android:text="View"
                 android:textColor="@color/dot_dark_screen3"
@@ -62,7 +62,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight=".15"
+                android:layout_weight="1"
                 android:gravity="center|center_vertical">
 
                 <ImageView
