--- a/app/src/main/res/layout/activity_chat_.xml
+++ b/app/src/main/res/layout/activity_chat_.xml
@@ -104,5 +104,73 @@
 
 </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:id="@+id/pro"
+        android:background="#CC333232"
 
+        android:visibility="gone"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/white_border"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:padding="30dp"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:gravity="center"
+
+                android:textColor="@color/black"
+                android:id="@+id/t"
+                android:text="Send Message Request"
+                android:textSize="20sp"
+                />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/rectangular_border"
+                android:layout_below="@+id/t"
+                android:id="@+id/msgReq"
+                android:layout_marginTop="20dp"
+                android:hint="Type Message here"
+                android:padding="10dp"
+                />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_below="@+id/msgReq">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SEND"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:id="@+id/sendReq"
+                android:layout_marginRight="10dp"
+                android:textSize="18sp"
+                android:textColor="#03A9F4"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Cancel"
+                    android:layout_marginTop="30dp"
+                    android:gravity="center"
+                    android:id="@+id/cancelReq"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="18sp"
+                    android:layout_toRightOf="@+id/sendReq"
+                    android:textColor="@color/black"/>
+            </RelativeLayout>
+
+        </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
