--- a/app/src/main/res/layout/activity_password__reset.xml
+++ b/app/src/main/res/layout/activity_password__reset.xml
@@ -143,4 +143,11 @@
             android:background="@drawable/rectangular_round_searchbar"/>
     </RelativeLayout>
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone"
+        android:id="@+id/pro"/>
 </RelativeLayout>
