--- a/app/src/main/res/layout/activity_post_video.xml
+++ b/app/src/main/res/layout/activity_post_video.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/profileToolbar"
@@ -33,9 +33,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="5dp"
-                    android:layout_centerHorizontal="true"
                     android:text="Post Video"
                     android:textColor="#000000" />
 
@@ -49,8 +49,7 @@
                     android:layout_marginRight="15dp"
                     android:text="Post"
                     android:textColor="@color/scheme8"
-                    android:textSize="18sp"
-                     />
+                    android:textSize="18sp" />
 
 
             </RelativeLayout>
@@ -70,12 +69,11 @@
             android:id="@+id/inputCaption"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_below="@id/progress"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:backgroundTint="@color/white"
-            android:layout_below="@id/videoBox"
             android:background="@drawable/rectangular_border"
-
+            android:backgroundTint="@color/white"
             android:hint="Enter Title or Caption"
             android:imeOptions="actionNext"
             android:inputType="textFilter"
@@ -89,51 +87,47 @@
             android:layout_height="2dp"
             android:layout_below="@+id/inputCaption"
             android:background="#E5E6EB" />
+
         <LinearLayout
+            android:id="@+id/relThumbnail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/captionLine"
             android:orientation="horizontal"
-            android:weightSum="3"
-            android:id="@+id/relThumbnail">
+            android:weightSum="3">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/thumbtext"
-            android:layout_margin="20dp"
-            android:layout_weight="1.5"
-            android:layout_centerVertical="true"
+            <TextView
+                android:id="@+id/thumbtext"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_margin="20dp"
+                android:layout_weight="1.5"
 
-            android:text="Pick a Thumbnail:"
-            android:textColor="#03A9F4"
-            android:textSize="15sp" />
+                android:text="Pick a Thumbnail:"
+                android:textColor="#03A9F4"
+                android:textSize="15sp" />
 
-        <ImageView
-            android:id="@+id/thumbnailButton"
-            android:layout_width="0dp"
-            android:layout_weight="0.5"
-            android:layout_height="20sp"
-            android:layout_marginTop="20dp"
-            android:layout_centerVertical="true"
+            <ImageView
+                android:id="@+id/thumbnailButton"
+                android:layout_width="0dp"
+                android:layout_height="20sp"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="20dp"
+                android:layout_weight="0.5"
+                android:background="@color/scheme8"
+                android:src="@drawable/ic_add" />
 
-
-            android:background="@color/scheme8"
-            android:src="@drawable/ic_add"
-            />
             <ImageView
                 android:id="@+id/thumbnailImage"
                 android:layout_width="20dp"
-                android:layout_weight="1"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_star_black"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="10dp"
-
-
-
-                />
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:src="@drawable/ic_star_black" />
         </LinearLayout>
+
         <androidx.cardview.widget.CardView
             android:id="@+id/videoBox"
             android:layout_width="match_parent"
@@ -141,39 +135,37 @@
             android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
             android:visibility="invisible"
-
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="10dp">
-
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <com.google.android.exoplayer2.ui.PlayerView
-                android:id="@+id/player_view"
-                android:layout_width="match_parent"
-
-                android:layout_height="0dp"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:backgroundTint="@color/black"
-                android:background="@drawable/square"
-                android:visibility="visible"
-                app:controller_layout_id="@layout/custom_controller"
-                app:fastforward_increment="10000"
-                app:hide_on_touch="true"
-                app:player_layout_id="@layout/exo_simple_player_view"
-                app:resize_mode="fit"
-                app:rewind_increment="10000"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="W,1:1"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:show_timeout="5000"
-                app:surface_type="texture_view"
-                app:use_controller="false" />
+                <com.google.android.exoplayer2.ui.PlayerView
+                    android:id="@+id/player_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:background="@drawable/square"
+                    android:backgroundTint="@color/black"
+                    android:visibility="visible"
+                    app:controller_layout_id="@layout/custom_controller"
+                    app:fastforward_increment="10000"
+                    app:hide_on_touch="true"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="W,1:1"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:player_layout_id="@layout/exo_simple_player_view"
+                    app:resize_mode="fit"
+                    app:rewind_increment="10000"
+                    app:show_timeout="5000"
+                    app:surface_type="texture_view"
+                    app:use_controller="false" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+
             <com.orion.orion.util.SquareImageView
                 android:id="@+id/thumbnail"
                 android:layout_width="match_parent"
@@ -192,33 +184,33 @@
                 android:id="@+id/close"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_margin="5dp"
                 android:layout_gravity="left|top"
+                android:layout_margin="5dp"
                 android:src="@drawable/ic_baseline_close_24" />
 
             <ImageView
                 android:id="@+id/unmute"
-                android:layout_margin="5dp"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="bottom"
+                android:layout_margin="5dp"
                 android:src="@drawable/unmute" />
 
             <ImageView
                 android:id="@+id/mute"
-                android:layout_margin="5dp"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="bottom"
+                android:layout_margin="5dp"
                 android:src="@drawable/mute"
                 android:visibility="gone" />
 
             <TextView
                 android:id="@+id/duration"
-                android:layout_margin="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:layout_gravity="right"
+                android:layout_margin="5dp"
                 android:text="0s"
                 android:textColor="#686868" />
 
@@ -228,13 +220,13 @@
             android:id="@+id/progress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center_horizontal"
-            android:textColor="@color/grey"
-            android:padding="10dp"
-            android:textSize="15sp"
             android:layout_below="@id/videoBox"
-            android:visibility="gone"
+            android:layout_marginTop="7dp"
+            android:gravity="center_horizontal"
+            android:padding="10dp"
+            android:textColor="@color/grey"
+            android:textSize="15sp"
+            android:visibility="visible"
             tools:text="Progress" />
 
         <ProgressBar
