--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -468,6 +468,30 @@
                     android:lineHeight="20sp"
                     android:maxLines="2" />
 
+                <TextView
+                    android:id="@+id/link1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textColor="#00BCD4"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/link2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textColor="#00BCD4"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/link3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textColor="#00BCD4"
+                    android:textSize="16sp" />
+
                 <LinearLayout
                     android:id="@+id/share_skill_btn"
                     android:layout_width="wrap_content"
