--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#f29492</color>
     <color name="colorPrimaryDark">#E3706E</color>
-    <color name="colorAccent">#FF9800</color>
+    <color name="colorAccent">#f29492</color>
     <color name="white">#ffffff</color>
     <color name="grey">#9C9797</color>
     <color name="black">#000000</color>
