--- a/app/src/main/res/layout/explore_item.xml
+++ b/app/src/main/res/layout/explore_item.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="2dp"
     app:cardUseCompatPadding="true">
 
     <LinearLayout
@@ -13,17 +12,15 @@
         android:orientation="vertical"
         android:padding="3dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:scaleType="centerCrop"
+                android:src="@drawable/ic_star_black"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="W,1:1"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -31,23 +28,18 @@
             <ImageView
                 android:id="@+id/progress"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:layout_height="75dp"
                 android:scaleType="centerCrop"
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:src="@drawable/load"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="W,1:1"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+           />
 
         <TextView
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:text=""
+            android:text="naanman"
             android:textColor="@color/black"
             android:textSize="10sp"
             android:textStyle="bold" />
