--- a/app/src/main/res/layout/grid_image_item.xml
+++ b/app/src/main/res/layout/grid_image_item.xml
@@ -7,30 +7,21 @@
     app:cardCornerRadius="2dp"
     app:contentPadding="3dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+
+
 <ImageView
-    android:layout_width="wrap_content"
-    android:layout_height="0dp"
-    app:layout_constraintDimensionRatio="W,1:1"
+    android:layout_width="75dp"
+    android:layout_height="75dp"
     android:scaleType="centerCrop"
     android:id="@+id/image"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"/>
+/>
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            app:layout_constraintDimensionRatio="W,1:1"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:scaleType="centerCrop"
             android:id="@+id/progress"
             android:visibility="gone"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@drawable/load"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    />
 </androidx.cardview.widget.CardView>
