--- a/app/src/main/res/layout/fragment_mainfeed_listitem.xml
+++ b/app/src/main/res/layout/fragment_mainfeed_listitem.xml
@@ -277,7 +277,7 @@
                     <ImageView
                         android:layout_width="60dp"
                         android:layout_height="60dp"
-                        android:src="@drawable/ic_play_btn"
+                        android:src="@drawable/ic_play_black_logo"
                         android:layout_gravity="center"
                         android:id="@+id/play"/>
 
