--- a/app/src/main/res/layout/activity_fragment_upcoming_contest.xml
+++ b/app/src/main/res/layout/activity_fragment_upcoming_contest.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parent"
     android:background="@color/white"
 
@@ -191,6 +192,7 @@
             android:layout_below="@+id/drag"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:id="@+id/recycler_view1">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -216,26 +218,28 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:layout_gravity="end">
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal">
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:id="@+id/cross"
-                android:layout_alignParentRight="true"
+                android:layout_centerHorizontal="true"
+
                 android:src="@drawable/ic_white_cross"
                 android:layout_margin="10dp"/>
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_below="@+id/cross"
+                android:id="@+id/recyclerKey">
 
+            </androidx.recyclerview.widget.RecyclerView>
         </RelativeLayout>
     </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:id="@+id/recyclerKey">
 
-    </androidx.recyclerview.widget.RecyclerView>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
