--- a/app/src/main/res/layout/layout_contest_item2.xml
+++ b/app/src/main/res/layout/layout_contest_item2.xml
@@ -7,6 +7,13 @@
     app:cardBackgroundColor="@color/white"
     app:cardElevation="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:id="@+id/r1"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,7 +52,7 @@
             >
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:layout_height="200dp"
                 app:layout_constraintDimensionRatio="W,1:1"
                 android:scaleType="centerInside"
                 android:id="@+id/posterD"
@@ -53,19 +60,24 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                app:layout_constraintDimensionRatio="W,1:1"
-                android:scaleType="centerInside"
-                android:id="@+id/progress"
-                app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/load"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+    </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:gravity="bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_height="wrap_content">
+            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+
+            android:orientation="vertical">
+
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -123,6 +135,8 @@
             android:textColor="@color/black"
             />
             </RelativeLayout>
+            </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
